✨ Improve accessibility by adding aria-labels to various input fields and labels in HTML files